# rubber-duck

./: .dockerignore  .gitignore  CHANGELOG.md  Contributers.md  Dockerfile  LICENSE  README.md  Readme.md  alembic.ini  bot_commands.py  build_docker.sh  cdx  config.json  config_proposal.json  delete_chroma_info.py  delete_me.txt  discord_bot.py  discord_bot2.py  docker.sh  duck-production-config.json  ecs_config_mounting.sh  esc_setup.sh  exceptions.py  experiment.py  feedback-workflow-config.yaml  feedback-workflow-example.yaml  feedback.py  local-config-example.yaml  local-config.yaml  metrics.py  myconfig.json  nic-teams.yaml  production-config.json  production-config.yaml  production-teams-config.yaml  proposal_version_two.json  pyproject.toml  report.ipynb  report.py  reporter.py  (+17 more)
.myteam/: load.py  role.md
.myteam copy/: role.md
alembic/: env.py  script.py.mako
application-design/: application_interface.md
archive/: README.md
assignments/: Project_2_Convex_Hull.md
backlog/: microsoft-teams.md  stats-stress-test.md
configs/: 2023-09-21-config.json  base-config.yaml  ducks-config.yaml  local-config-example.yaml  local-config.yaml  production-config.yaml  production-cs312-grader-duck.yaml  production-ducks.yaml  production-servers.yaml  production-settings.yaml  servers-config.yaml
datasets/: Admission_Predict.meta.json  GestationalAge.csv  GestationalAge.meta.json  MLBHitting.txt  README.md  admissions.meta.json  carprice.csv  carprice.meta.json  generate_metadata.py
docs/: application_interface.md  deployment.md  getting-started.md
infra/: config.json  ecs-infra.yml  pre-production-config.json  production-config.json
meetings/: 2026-04-10-1528.md  2026-04-15-1000.md
prompts/: agent1.txt  agentic-workflow.txt  concept-clarifier.txt  designer-duck.txt  determine_tool_call_stats.txt  discord_setup.txt  duck-pond-4.1.txt  duck-pond.txt  emoji.txt  explainer-duck.txt  generate-code-complexity.md  guessing_game.txt  learning_objectives.txt  learning_objectives_prompt.txt  phd-duck.txt  rag-tutor.txt  (+17 more)
(+910 files in other folders)
