[tool.poetry]
name = "rubber_duck"
version = "0.2.4"
description = ""
authors = ["Gordon Bean <gbean@cs.byu.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.11.1"
discord = "^2.1.0"
urllib3 = "<2.0"
quest-py = "0.2.12"
seaborn = "0.13.2"
pandas = "^2.2.2"
aiofiles = "^24.1.0"
sqlalchemy = "^2.0.38"
boto3 = "^1.36.6"
requests = "^2.32.3"
pymysql = "^1.1.1"
openai-agents ="^0.0.14"
scipy = "^1.15.3"
websockets = "^15.0.1"
schedule = "^1.2.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

